add count all for gpus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
+              count: all
               capabilities: [ gpu ]
     volumes:
       - lance_data:/data
